--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
             <groupId>io.rest-assured</groupId>
             <artifactId>rest-assured</artifactId>
             <version>5.1.1</version>
+            <scope>test</scope>
         </dependency>
 
         <!--    JUnit -->
@@ -25,12 +26,16 @@
             <artifactId>junit</artifactId>
             <groupId>junit</groupId>
             <version>4.13.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <artifactId>junit-jupiter-api</artifactId>
             <groupId>org.junit.jupiter</groupId>
             <version>5.8.2</version>
+            <scope>test</scope>
         </dependency>
+
+        <!--    Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -44,6 +49,13 @@
             <version>2.13.3</version>
         </dependency>
 
+        <!--    testNG-->
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.6.0</version>
+            <scope>test</scope>
+        </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
